--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>First Landing Page</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>First Landing Page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="header">
+    <!-- logo goes here -->
+    <h1>Cat Appreciation Page</h1>
+    <ul>
+      <li>header link one</li>
+      <li>header link two</li>
+      <li>header link three</li>
+    </ul>
+  </div>
+
+  <div class="intro">
+    <div class="leftbox">
+      <h1>This website is awesome</h1>
+      <p>This website has some subtext that goes under here under the main title.
+        It's a smaller font and the color is lower contrast.</p>
+      <button>Sign up</button>
+    </div>
+    <!-- image -->
+  </div>
+
+  <div class="info">
+    <h1>Some random information.</h1>
+    <div class="boxes">
+      <div class="box">
+        <!-- image -->
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="box">
+        <!-- image -->
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="box">
+        <!-- image -->
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+      <div class="box">
+        <!-- image -->
+        <p>this is some subtext under an illustration or image</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="quote">
+    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's
+      just filling up space, or maybe people will actually read it. Who knows?
+      All I know is that it looks nice.
+    </p>
+    <p>-Thor, God of Thunder</p>
+  </div>
+
+  <div class="register">
+    <p>Call to action! It's time!</p>
+    <p>Sign up for our product by clicking that button right over there!</p>
+    <button>Sign up</button>
+  </div>
+
+  <div class="footer">
+    <h1>Webpage by Justin Pham</h1>
+  </div>
+</body>
 </html>
