--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="header">
     <!-- logo goes here -->
-    <h1>Cat Appreciation Page</h1>
-    <ul>
+    <h3>Sample Page</h3>
+    <ul class="links">
       <li>header link one</li>
       <li>header link two</li>
       <li>header link three</li>
@@ -20,52 +20,58 @@
 
   <div class="intro">
     <div class="leftbox">
-      <h1>This website is awesome</h1>
-      <p>This website has some subtext that goes under here under the main title.
+      <h1>This website is a sample</h1>
+      <p>This website has some subtext that goes under the main title.
         It's a smaller font and the color is lower contrast.</p>
       <button>Sign up</button>
     </div>
-    <!-- image -->
+    <div id="image">
+      <img src="./images/barberry.png" alt="barberry">
+    </div>
   </div>
 
   <div class="info">
-    <h1>Some random information.</h1>
+    <h2>Some random information.</h2>
     <div class="boxes">
       <div class="box">
-        <!-- image -->
+        <img src="./images/barberry.png" alt="barberry">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="box">
-        <!-- image -->
+        <img src="./images/chilli.png" alt="chilli">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="box">
-        <!-- image -->
+        <img src="./images/pepper.png" alt="pepper">
         <p>this is some subtext under an illustration or image</p>
       </div>
       <div class="box">
-        <!-- image -->
+        <img src="./images/saffron.png" alt="saffron">
         <p>this is some subtext under an illustration or image</p>
       </div>
     </div>
   </div>
 
   <div class="quote">
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's
+    <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's
       just filling up space, or maybe people will actually read it. Who knows?
       All I know is that it looks nice.
-    </p>
+    </h2>
     <p>-Thor, God of Thunder</p>
   </div>
 
   <div class="register">
-    <p>Call to action! It's time!</p>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button>Sign up</button>
+    <div class="container">
+      <div class="text">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <button>Sign up</button>
+    </div>
   </div>
 
   <div class="footer">
-    <h1>Webpage by Justin Pham</h1>
+    <h3>Webpage by Justin Pham</h3>
   </div>
 </body>
 </html>
